# cinematch

./: .gitignore  README.md  dev.sh
backend/: pyproject.toml
backend/app/: auth.py  build_model.py  config.py  database.py  db_models.py  main.py  models.py  recommender.py  schemas.py  taste.py
backend/app/routers/: auth.py  personalized.py  ratings.py  watchlist.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  skills-lock.json
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  router.jsx
frontend/src/components/: MovieCard.jsx  Navbar.jsx
frontend/src/pages/: HomePage.jsx  LoginPage.jsx  MovieDetailPage.jsx  MoviesPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SearchPage.jsx
